public enum EstadoJob {
    EN_COLA, EN_EJECUCION, FINALIZADO, FALLIDO, VALIDADO
}
