public enum EstadoNode {
    LIBRE, OCUPADO, FUERA_DE_SERVICIO  
}
