@startuml
title Diagrama de clases - Sistema concurrente de Jobs

skinparam classAttributeIconSize 0
skinparam linetype ortho

' ================= ENUMS =================

enum EstadoJob {
    EN_COLA
    EN_EJECUCION
    FINALIZADO
    FALLIDO
    VALIDADO
}

enum EstadoNode {
    LIBRE
    OCUPADO
    FUERA_DE_SERVICIO
}

' ================= INTERFACES =================

interface Runnable {
    + run() : void
}

' ================= CLASES PRINCIPALES =================

class Job {
    - id : int
    - estado : EstadoJob
    - nodoAsignado : int
    + getEstado() : EstadoJob
    + setEstado(e : EstadoJob) : void
    + getID() : int
    + setAssignedNodeId(id : int) : void
}

class JobQueue {
    - queue : List<Job>
    - closed : boolean
    + pushJob(job : Job) : void
    + popJob() : Job
    + popRandomJob() : Job
    + popJobBlocking() : Job
    + close() : void
    + size() : int
}

class Node {
    - id : int
    - estado : EstadoNode
    - contadorEjecuciones : int
    + intentarOcupar() : boolean
    + setEstado(e : EstadoNode) : void
    + getEstado() : EstadoNode
    + incrementarContador() : void
}

class NodeMatrix {
    - nodos : Node[]
    - cantidadNodos : int
    + ocuparNodoAleatorio() : Node
    + desocuparNodo(id : int) : boolean
    + sacarDeServicio(id : int) : boolean
}

class Scheduler {
    - creados : JobQueue
    - enCola : JobQueue
    - matriz : NodeMatrix
    + run() : void
}

class PreExecutionCheck {
    - jobsEnCola : JobQueue
    - jobsEnEjecucion : JobQueue
    - jobsFallidos : JobQueue
    - nodeMatrix : NodeMatrix
    + run() : void
}

class WorkerExecution {
    - jobsEnEjecucion : JobQueue
    - jobsFinalizados : JobQueue
    - jobsFallidos : JobQueue
    + run() : void
}

class PostProcessing {
    - jobsFinalizados : JobQueue
    - jobsValidados : JobQueue
    - jobsFallidos : JobQueue
    + run() : void
}

class Main

' ================= RELACIONES =================

' HERENCIA / IMPLEMENTACION
Scheduler ..|> Runnable
PreExecutionCheck ..|> Runnable
WorkerExecution ..|> Runnable
PostProcessing ..|> Runnable

' COMPOSICION
NodeMatrix *-- Node : contiene

' AGREGACION
JobQueue o-- Job : almacena

' ASOCIACIONES FUERTES
Scheduler --> JobQueue : usa
Scheduler --> NodeMatrix : asigna nodo

PreExecutionCheck --> JobQueue
PreExecutionCheck --> NodeMatrix

WorkerExecution --> JobQueue
PostProcessing --> JobQueue

Main --> Scheduler
Main --> PreExecutionCheck
Main --> WorkerExecution
Main --> PostProcessing

' DEPENDENCIAS
Job --> EstadoJob
Node --> EstadoNode

@enduml